Move to a runtime object in the function specification that gets ignored.
