# lib/server/function-lambda/src/put_function.js
@@ -34,6 +34,9 @@ export function put_function(req, res, next) {
     delete req.body.lambda.memory_size;
   }
 
+  // Remove any runtime-generated values in the body, such as tags from a previous GET.
+  delete req.body.runtime;
+
   if (req.body.subscriptionId !== undefined && req.body.subscriptionId !== req.params.subscriptionId) {
     const message = [
       `The subscriptionId in the body '${req.body.subscriptionId}'`,
